# Netanomy-Master

./: .travis.yml  .travis.yml.swp  CMakeLists.txt  Doxyfile  README.md  configure.sh  travis_clang.sh
doc/: simpl_protocol.dia  simpl_protocol.dia~
doc/html/: annotated.html  classcpplint_1_1CleansedLines-members.html  classcpplint_1_1CleansedLines.html  classes.html  functions.html  functions_func.html  index.html
doc/latex/: annotated.tex  classcpplint_1_1CleansedLines.tex  doxygen.sty  refman.aux  refman.dvi  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
src/: CMakeLists.txt  config.cpp  config.hpp  gui_connector.hpp  logger.cpp  logger.hpp  main.cpp  result_processor.hpp
zeromq-4.0.1/: Makefile  config.status  libtool
zeromq-4.0.1/doc/: Makefile
zeromq-4.0.1/perf/: Makefile  inproc_lat  inproc_thr  local_lat  local_thr  remote_lat  remote_thr
zeromq-4.0.1/src/: Makefile  libzmq.la  libzmq.pc  platform.hpp
zeromq-4.0.1/tests/: Makefile  test_abstract_ipc  test_conflate  test_connect_resolve  test_ctx_destroy  test_ctx_options  test_disconnect_inproc  test_fork  test_hwm  test_immediate  test_inproc_connect  test_invalid_rep  test_iov  test_issue_566  test_last_endpoint  test_linger  test_monitor  test_msg_flags  test_pair_inproc  test_pair_ipc  test_pair_tcp  test_probe_router  test_req_correlate  test_req_relaxed  test_reqrep_device  test_reqrep_inproc  test_reqrep_ipc  test_reqrep_tcp  test_router_mandatory  test_security_curve  test_security_null  test_security_plain  test_shutdown_stress  test_spec_dealer  test_spec_pushpull  (+8 more)
(+169 files in other folders)
